kubernetes-part1/examples/deployment-with-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-java-app
  template:
    metadata: 
      labels: 
        app: hello-java-app
    spec:
      containers:
      - name: hello-java
        image: plotnikov93av/otus-docker-hw:v3
        ports:
          - name: web
            containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
