kubernetes-part1/examples/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: hello-demo
  labels: 
    app: hello-demo
spec:
  containers:
  - name: hello-demo
    image: plotnikov93av/otus-docker-hw:v1
    ports:
      - containerPort: 8080
