kubernetes-part1/examples/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: hello-service
spec:
  selector:
    app: hello-java-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
